--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,8 +3,8 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* header-css*/
@@ -43,6 +43,7 @@ body {
 
 .navigation {
     padding-right: 60px;
+    font-weight: bold;
 }
 
 .menu-icon {
@@ -71,15 +72,22 @@ body {
     color: #fff;
     padding: 20px 30px;
     display: block;
+    text-decoration: none;
 }
 
 .show {
     display: block;
 }
 
-a {
+.menu {
     color: #fff;
     text-decoration: none;
+}
+
+.dropbtn {
+    background: transparent;
+    border: 0px;
+    cursor: pointer;
 }
 
 /* main-content-css */
@@ -91,7 +99,7 @@ a {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-img {
+.gallery-photos {
     width: 100%;
     height: 100%;
 }
@@ -109,14 +117,8 @@ img {
     background-color: black;
 }
 
-button {
-    background: transparent;
-    border: 0px;
-}
-
 /* footer-css */
-
-footer {
+.footer {
     display: grid;
     grid-template-columns: 3fr 1fr 1fr 1fr;
     background-color: #161f1e;
@@ -141,11 +143,11 @@ footer {
     color: #fff;
 }
 
-ul {
+.footer-list {
     padding-left: 0px;
 }
 
-li {
+.footer-links {
     margin: 0px;
     padding: 0px;
     list-style-type: none;
@@ -158,7 +160,7 @@ li {
     .left-header {
         padding-left: 0px;
     }
-    footer {
+    .footer {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
         background-color: #161f1e;
@@ -185,7 +187,7 @@ li {
         margin-left: 150px;
         margin-top: 50px;
     }
-    footer {
+    .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         background-color: #161f1e;
@@ -212,7 +214,7 @@ li {
         margin-left: 150px;
         margin-top: 50px;
     }
-    footer {
+    .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         background-color: #161f1e;
@@ -226,5 +228,3 @@ li {
         margin-bottom: 90px;
     }
 }
-
-@media only screen and (max-width: 880px) {}
