--- a/css/our_world.css
+++ b/css/our_world.css
@@ -169,3 +169,99 @@ body {
     margin-bottom: 20px;
     font-size: 17px;
 }
+
+@media only screen and (max-width:1300px) {
+    .left-header {
+        padding-left: 0px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+
+    .main-content{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-bottom: 50px;
+        gap: 20px;
+    }
+
+    .left-header {
+        margin: 0px;
+        padding-left: 0px;
+    }
+    .navigation {
+        padding-right: 20px;
+    }
+    .header-text {
+        margin-left: 150px;
+        margin-top: 50px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .main-content{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-bottom: 50px;
+        gap: 20px;
+    }
+
+    .left-header {
+        margin: 0px;
+        padding-left: 0px;
+    }
+    .navigation {
+        padding-right: 20px;
+    }
+    .header-text {
+        margin-left: 150px;
+        margin-top: 50px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
+}
