--- a/css/homepage.css
+++ b/css/homepage.css
@@ -133,10 +133,8 @@ body {
 /* main-content */
 
 .section-1 {
-    /* min-height: 100vh;
-    min-width: 100vh; */
-    min-height: 100%;
-    min-width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     background-image: url("../assets/homepage/background-image.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -184,6 +182,7 @@ body {
 .right-side-image{
     padding-top: 120px;
     width: 700px;
+    /* padding-left: 50px; */
 }
 
 /* footer-css */
@@ -226,4 +225,81 @@ body {
     color: #fff;
     margin-bottom: 20px;
     font-size: 17px;
+}
+
+@media only screen and (max-width:1300px) {
+    .left-header {
+        padding-left: 0px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
+}
+
+@media only screen and (max-width:1500px) {
+
+}
+
+@media only screen and (max-width:1200px) {
+    .left-header {
+        margin: 0px;
+        padding-left: 0px;
+    }
+    .navigation {
+        padding-right: 20px;
+    }
+    .header-text {
+        margin-left: 150px;
+        margin-top: 50px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .left-header {
+        margin: 0px;
+        padding-left: 0px;
+    }
+    .navigation {
+        padding-right: 20px;
+    }
+    .header-text {
+        margin-left: 150px;
+        margin-top: 50px;
+    }
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        background-color: #161f1e;
+    }
+    .footer-logo {
+        margin-left: 100px;
+        margin-bottom: 220px;
+    }
+    .footer-tag {
+        margin-left: 100px;
+        margin-bottom: 90px;
+    }
 }
