--- a/css/homepage.css
+++ b/css/homepage.css
@@ -25,7 +25,7 @@ body {
 
 #header-navigation {
     position: relative;
-    height: 40vh;
+    height: 30vh;
     background-attachment: fixed;
 }
 
@@ -122,7 +122,7 @@ body {
 .scroll-text {
     position: relative;
     background-attachment: fixed;
-    height: 10vh;
+    height: 20vh;
     color: #fff;
     font-family: 'Playfair Display', serif;
     padding-left: 60px;
@@ -130,7 +130,16 @@ body {
     font-weight: 100;
 }
 
+.scroll-arrow{
+    padding-left: 1600px;
+}
+
 /* main-content */
+.main-contect{
+    max-width: 100%;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
 
 .section-1 {
     max-height: 100%;
@@ -180,9 +189,9 @@ body {
 }
 
 .right-side-image{
-    padding-top: 120px;
+    padding-top: 150px;
     width: 700px;
-    /* padding-left: 50px; */
+    padding-left: 20px;
 }
 
 /* footer-css */
