REFACTORED: Design styles to highlight current page

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -90,6 +90,10 @@ body {
     cursor: pointer;
 }
 
+.gallery-page{
+    border-bottom: 2px solid #fff;
+}
+
 /* main-content-css */
 
 .main-content {
