--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #f3f3f3;
 }
 
 /* header-css*/
@@ -125,25 +126,28 @@ body {
     height: 20vh;
     color: #fff;
     font-family: 'Playfair Display', serif;
-    padding-left: 60px;
     font-size: 20px;
     font-weight: 100;
+    padding-left: 60px;
 }
 
-.scroll-arrow{
+.scroll-arrow {
     padding-left: 1600px;
 }
 
 /* main-content */
-.main-contect{
+
+.main-contect {
     max-width: 100%;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
 }
 
+/* section 1 */
+
 .section-1 {
-    max-height: 100%;
-    max-width: 100%;
+    /* max-height: 100%;
+    max-width: 100%; */
     background-image: url("../assets/homepage/background-image.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -151,13 +155,13 @@ body {
     grid-template-columns: 1fr 1fr;
 }
 
-.left-side-content{
+.left-side-content {
     letter-spacing: 1px;
     font-family: 'Playfair Display', serif;
     padding-left: 250px;
 }
 
-.welcome-text{
+.welcome-text {
     color: #000000;
     margin: 0px 0px;
     padding: 0px 0px;
@@ -166,32 +170,390 @@ body {
     font-weight: lighter;
 }
 
-.ourworld-text{
+.ourworld-text {
     margin: 0px 0px;
     padding: 0px 0px;
     font-size: 50px;
     font-weight: lighter;
 }
 
-.section1-text{
+.section1-text {
     margin: 0px 0px;
     padding-top: 30px;
     padding-right: 300px;
     line-height: 40px;
+    text-align: justify;
+    font-size: larger;
 }
 
-.left-side-image{
+.left-side-image {
     padding-left: 200px;
     padding-right: 2px;
-    padding-top: 200px;
+    padding-top: 120px;
     padding-bottom: 200px;
     width: 800px;
 }
 
-.right-side-image{
-    padding-top: 150px;
-    width: 700px;
+.right-side-image {
+    padding-top: 80px;
+    /* width: 800px; */
     padding-left: 20px;
+    padding-bottom: 50px;
+}
+
+/* section 2 */
+
+.section-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-family: 'Playfair Display', serif;
+    padding-left: 250px;
+    padding-top: 50px;
+    background-color: #fff;
+}
+
+.explore-text {
+    color: #000000;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    font-size: 60px;
+    font-weight: lighter;
+}
+
+.ourworlds-text {
+    font-size: 50px;
+    font-weight: lighter;
+    padding-bottom: 100px;
+    margin: 0px;
+}
+
+.button {
+    border-radius: 100%;
+    background-color: #fff;
+    border: none;
+    padding: 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    box-shadow: 0 8px 14px 0 rgb(0 0 0 / 15%);
+    cursor: pointer;
+}
+
+.button-first {
+    margin-right: 20px;
+}
+
+.section2-arrow {
+    width: 30px;
+}
+
+.section2-right {
+    padding-left: 500px;
+}
+
+/* section 3 */
+
+.section-3 {
+    display: grid;
+    grid-template-columns: repeat(25, 1fr);
+    gap: 20px;
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.image-cards{
+    animation : slide 10s linear infinite;
+}
+
+@keyframes slide {
+    0% {
+      transform: translatex(0%)
+    }
+  
+    100% {
+      transform: translatex(-100%)
+    }
+  }
+
+.explore-images {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 640px;
+    height: 700px;
+    padding-left: 60px;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    margin: 0px;
+}
+
+.image-1 {
+    background-image: url("../assets/homepage/1_explore.jpg");
+}
+
+.image-2 {
+    background-image: url("../assets/homepage/2_explore.jpg");
+}
+
+.image-3 {
+    background-image: url("../assets/homepage/3_explore.jpg");
+}
+
+.image-4 {
+    background-image: url("../assets/homepage/4_explore.jpg");
+}
+
+.image-5 {
+    background-image: url("../assets/homepage/5_explore.jpg");
+}
+
+.image-6 {
+    background-image: url("../assets/homepage/6_explore.jpg");
+}
+
+.image-7 {
+    background-image: url("../assets/homepage/7_explore.jpg");
+}
+
+.image-8 {
+    background-image: url("../assets/homepage/8_explore.jpg");
+}
+
+.image-9 {
+    background-image: url("../assets/homepage/9_explore.jpg");
+}
+
+.image-10 {
+    background-image: url("../assets/homepage/10_explore.jpg");
+}
+
+.image-11 {
+    background-image: url("../assets/homepage/11_explore.jpg");
+}
+
+.image-12 {
+    background-image: url("../assets/homepage/12_explore.jpeg");
+}
+
+.image-13 {
+    background-image: url("../assets/homepage/13_explore.jpg");
+}
+
+.image-14 {
+    background-image: url("../assets/homepage/14_explore.jpg");
+}
+
+.image-15 {
+    background-image: url("../assets/homepage/15_explore.jpg");
+}
+
+.image-16 {
+    background-image: url("../assets/homepage/16_explore.jpg");
+}
+
+.image-17 {
+    background-image: url("../assets/homepage/17_explore.jpg");
+}
+
+.image-18 {
+    background-image: url("../assets/homepage/18_explore.jpg");
+}
+
+.image-19 {
+    background-image: url("../assets/homepage/19_explore.jpg");
+}
+
+.image-20 {
+    background-image: url("../assets/homepage/20_explore.jpg");
+}
+
+.image-21 {
+    background-image: url("../assets/homepage/21_explore.jpeg");
+}
+
+.image-22 {
+    background-image: url("../assets/homepage/22_explore.jpg");
+}
+
+.image-23 {
+    background-image: url("../assets/homepage/23_explore.jpg");
+}
+
+.image-24 {
+    background-image: url("../assets/homepage/24_explore.jpg");
+}
+
+.image-25 {
+    background-image: url("../assets/homepage/25_explore.jpg");
+}
+
+.explore-title {
+    padding-top: 550px;
+}
+
+.explore-location {
+    padding-bottom: 30px;
+    margin-top: 0px;
+}
+
+/* section 4 */
+
+.section-4 {
+    padding-top: 140px;
+    padding-bottom: 100px;
+    background-color: #f3f3f3;
+    ;
+}
+
+.section4-title {
+    padding-left: 250px;
+    font-family: 'Playfair Display', serif;
+    padding-bottom: 20px;
+}
+
+.discovery-text {
+    padding-bottom: 20px;
+}
+
+.section4-para {
+    line-height: 40px;
+    text-align: justify;
+    font-size: larger;
+    padding-bottom: 20px;
+}
+
+.map-title {
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.selected-map {
+    border-bottom: 2px solid black;
+}
+
+.unselected-map {
+    padding-left: 30px;
+}
+
+/* section 5 */
+
+.section-5 {
+    background-color: #f3f3f3;
+    max-width: 100vh;
+    max-height: 120vh;
+    margin-right: 0px;
+}
+
+.section5-map {
+    position: relative;
+    z-index: 1;
+}
+
+.section5-details {
+    background-color: #161f1e;
+    position: relative;
+    z-index: 2;
+    top: -1100px;
+    left: 1100px;
+    max-width: 1000px;
+    height: 600px;
+}
+
+.section5-image {
+    position: relative;
+    z-index: 3;
+    top: -1800px;
+    left: 1600px;
+}
+
+.section5-arrow {
+    color: #fff;
+}
+
+.section5-content{
+    padding-left: 62px;
+    padding-right: 62px;
+    padding-bottom: 50px;
+    font-family: 'Playfair Display', serif;
+}
+
+/* .icons{
+    padding-top: 50px;
+} */
+
+.sun-icon{
+    padding-right: 62px;
+}
+
+.compass-icon{
+    padding-left: 62px;
+}
+
+.icon-text{
+    font-size: 18px;
+    color: gray;
+    font-weight: lighter;
+    padding-right: 50px;
+    padding-left: 5px;
+}
+
+.location{
+    color: gray;
+    font-size: 18px;
+    padding-bottom: 0px;
+}
+
+.title{
+    color: #fff;
+    font-size: 50px;
+}
+
+.location_value{
+    color: gray;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+/* section 6 */
+
+.section-6 {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.div-sections {
+    text-align: center;
+    padding-top: 60%;
+    padding-bottom: 80%;
+    font-family: 'Playfair Display', serif;
+    color: #fff;
+    font-size: 80px;
+}
+
+.section6-text {
+    margin-bottom: 0px;
+}
+
+.section6-image1 {
+    background-image: url("../assets/homepage/experiences.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.section6-image2 {
+    background-image: url("../assets/homepage/lifestyle.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.section6-image3 {
+    background-image: url("../assets/homepage/wellness.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 /* footer-css */
@@ -255,9 +617,7 @@ body {
     }
 }
 
-@media only screen and (max-width:1500px) {
-
-}
+@media only screen and (max-width:1500px) {}
 
 @media only screen and (max-width:1200px) {
     .left-header {
