--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f3f3f3;
+    overflow-x: hidden;
 }
 
 /* header-css*/
@@ -92,6 +93,10 @@ body {
 .menu {
     color: #fff;
     text-decoration: none;
+}
+
+.menu:hover {
+    border-bottom: 2px solid #fff;
 }
 
 .dropbtn {
@@ -181,6 +186,10 @@ body {
     color: #777777;
     font-size: 20px;
     line-height: 40px;
+}
+
+.section2-image{
+    height: 900px;
 }
 
 /* section 3 */
@@ -315,7 +324,6 @@ body {
 /* section 6 */
 
 .section-6 {
-    
     max-width: 100%;
     max-height: 100%;
     padding-bottom: 200px;
@@ -376,7 +384,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-.section10-content{
+
+.section10-content {
     padding-top: 250px;
     padding-bottom: 300px;
     text-align: center;
@@ -384,12 +393,12 @@ body {
     color: #fff;
 }
 
-.section10-title{
+.section10-title {
     font-size: 50px;
     padding-bottom: 20px;
 }
 
-.section10-link{
+.section10-link {
     text-decoration: none;
     font-size: 20px;
     color: #fff;
@@ -397,7 +406,7 @@ body {
     padding: 20px 50px;
 }
 
-.section10-link:hover{
+.section10-link:hover {
     border: 4px solid #fff;
 }
 
@@ -443,10 +452,139 @@ body {
     font-size: 17px;
 }
 
-@media only screen and (max-width:1300px) {
+@media only screen and (max-width:1550px) {
+    #right-header {
+        margin-left: 0px;
+        display: flex;
+        flex-direction: row;
+    }
+    .header-text {
+        padding-left: 300px;
+    }
+
+    /* section 2 */
+    .section-title {
+        font-size: 40px;
+        padding-left: 150px;
+        padding-top: 100px;
+    }
+    .mission-content {
+        padding-left: 150px;
+        padding-right: 150px;
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    /* section 4 */
+    .section-4 {
+        padding-left: 150px;
+    }
+    .section4-right {
+        padding-left: 100px;
+    }
+
+    /* section 7 */
+
+    .section-7 {
+        gap: 120px;
+    }
+
+    .left-image {
+        padding-left: 100px;
+        max-width: 100%;
+    }
+    .discovery-content {
+        padding-right: 100px;
+    }
+    .right-image {
+        padding-top: 200px;
+        padding-bottom: 100px;
+        padding-left: 0px;
+    }
+    /* section 9 */
+    .builders-image {
+        padding-left: 50px;
+        padding-right: 50px;
+        max-width: 2px;
+    }
+
+    .section9-image{
+        padding-left: 0px;
+    }
+}
+
+@media only screen and (max-width:1380px) {
+
+    /* header */
     .left-header {
         padding-left: 0px;
     }
+
+    /* section 1 */
+
+.section-1 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font-family: 'Playfair Display', serif;
+    font-size: 30px;
+    text-align: center;
+    letter-spacing: 0px;
+}
+
+     /* section 2 */
+
+     .section-title {
+        font-size: 40px;
+        padding-left: 70px;
+        padding-top: 100px;
+    }
+    .mission-content {
+        padding-left: 70px;
+        padding-right: 0px;
+        margin-right: 90px;
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .section2-image{
+        max-height: 80%;
+    }
+
+    /* section 4 */
+
+    .explore-text {
+        font-size: 50px;
+    }
+
+    /* section 7 */
+
+    .section-7 {
+        gap: 90px;
+    }
+
+    .left-image {
+        padding-left: 100px;
+        max-width: 100%;
+    }
+    .discovery-content {
+        padding-right: 100px;
+    }
+    .right-image {
+        max-width: 90%;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        padding-left: 0px;
+    }
+
+    /* section 9 */
+
+    .section9-left{
+        max-width: 400px;
+    }
+
+    .section9-right{
+        max-height: 700px;
+    }
+
     .footer {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
@@ -462,9 +600,8 @@ body {
     }
 }
 
-@media only screen and (max-width:1500px) {}
-
 @media only screen and (max-width:1200px) {
+    /* header */
     .left-header {
         margin: 0px;
         padding-left: 0px;
@@ -475,7 +612,9 @@ body {
     .header-text {
         margin-left: 150px;
         margin-top: 50px;
+        padding-left: 50px;
     }
+
     .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
