--- a/css/gallery.css
+++ b/css/gallery.css
@@ -5,6 +5,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
 }
 
 /* header-css*/
@@ -82,6 +83,10 @@ body {
 .menu {
     color: #fff;
     text-decoration: none;
+}
+
+.menu:hover{
+    border-bottom: 2px solid #fff;
 }
 
 .dropbtn {
