--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f3f3f3;
+    overflow-x: hidden;
 }
 
 /* header-css*/
@@ -91,6 +92,10 @@ body {
     text-decoration: none;
 }
 
+.menu:hover{
+    border-bottom: 2px solid #fff;
+}
+
 .dropbtn {
     background: transparent;
     border: 0px;
@@ -132,7 +137,9 @@ body {
 }
 
 .scroll-arrow {
-    padding-left: 1600px;
+
+    position: relative;
+    left: 80%;
 }
 
 /* main-content */
@@ -191,6 +198,7 @@ body {
     padding-right: 2px;
     padding-top: 120px;
     padding-bottom: 200px;
+    max-width: 900px;
 }
 
 .right-side-image {
@@ -271,7 +279,7 @@ body {
     }
   
     100% {
-      transform: translatex(-100%)
+      transform: translateX(-200%)
     }
   }
 
@@ -454,7 +462,7 @@ body {
     position: relative;
     z-index: 2;
     top: -1100px;
-    left: 1100px;
+    left: 110%;
     max-width: 1000px;
     height: 600px;
 }
@@ -463,7 +471,7 @@ body {
     position: relative;
     z-index: 3;
     top: -1800px;
-    left: 1600px;
+    left: 160%;
 }
 
 .section5-arrow {
@@ -596,10 +604,95 @@ body {
     font-size: 17px;
 }
 
-@media only screen and (max-width:1300px) {
+@media only screen and (max-width:1350px) {
+
+    /* header */
     .left-header {
         padding-left: 0px;
     }
+
+    .header-text{
+        padding-left: 100px;
+    }
+
+    /* .section-1 */
+
+    .left-side-content {
+        letter-spacing: 1px;
+        padding-left: 80px;
+    }
+
+    .welcome-text {
+        font-size: 40px;
+    }
+
+    .ourworld-text {
+        font-size: 30px;
+    }
+
+    .section1-text {
+        line-height: 30px;
+        padding-right: 150px;
+        font-size: 15px;
+    }
+
+    .left-side-image {
+        padding-left: 50px;
+        padding-right: 0px;
+        padding-top: 120px;
+        padding-bottom: 150px;
+        max-width: 500px;
+    }
+
+    .right-side-image {
+        padding-left: 0px;
+        padding-right: 50px;
+        max-width: 600px;
+    }
+
+     /* section 2 */
+
+     .section-2 {
+        padding-left: 100px;
+    }
+
+     .explore-text {
+        margin: 0px 0px;
+        padding: 0px 0px;
+        font-size: 40px;
+    }
+
+    .ourworlds-text {
+        font-size: 30px;
+        padding-bottom: 100px;
+        margin: 0px;
+    }
+
+    .section2-right {
+        padding-left: 90px;
+    }
+
+    /* section 4 */
+
+    .section4-title {
+        padding-left: 100px;
+        font-family: 'Playfair Display', serif;
+        padding-bottom: 20px;
+    }
+
+    /* section 5 */
+    .section5-details {
+        left: 30%;
+    }
+
+    .section5-image {
+        position: relative;
+        z-index: 3;
+        top: -1800px;
+        left: 80%;
+    }
+
+    /* footer */
     .footer {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
