--- a/css/press.css
+++ b/css/press.css
@@ -184,7 +184,7 @@ body {
     max-width: 30%;
     position: relative;
     z-index: 2;
-    top: -90vh;
+    top: -95vh;
     left: 60vw;
 }
 
@@ -227,13 +227,14 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: lighter;
     margin-top: -80vh;
-    margin-left: 40vw;
+    margin-left: 45vw;
     padding-right: 16vh;
     padding-bottom: 20vh;
 }
 
 .arrow {
     font-size: 3vw;
+    cursor: pointer;
 }
 
 .pages {
@@ -260,6 +261,14 @@ body {
 .publisher{
     padding-bottom: 5vh;
     font-size: 2vh;
+}
+
+.section-5 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+    margin-left: 45vw;
+    padding-right: 16vh;
+    padding-bottom: 10vh;
 }
 
 /* footer */
