--- a/css/homepage.css
+++ b/css/homepage.css
@@ -70,9 +70,12 @@ body {
     margin: 6px 0;
 }
 
-.dropdown-content {
+#dropdown{
     display: none;
-    position: absolute;
+}
+
+.dropdown-content {
+    /* position: absolute; */
     background-color: black;
 }
 
