--- a/css/about.css
+++ b/css/about.css
@@ -141,7 +141,8 @@ body {
 }
 
 .scroll-arrow {
-    padding-left: 1600px;
+    position: relative;
+    left: 80%;
 }
 
 .about-page {
@@ -455,6 +456,42 @@ body {
     font-size: 17px;
 }
 
+@media only screen and (max-width:1900px) {
+
+    .section-title, .mission-content{
+        padding-left: 7vw;
+        padding-right: 9vw;
+    }
+    .section-4{
+        padding-left: 7vw;
+    }
+
+    .section4-right{
+        padding-left: 20vw;
+    }
+    
+    .section-7{
+        gap: 6vw;
+    }
+
+    .right-image{
+        max-width: 90%;
+    }
+
+    .left-image{
+        padding-left: 8vw;
+    }
+
+    .discovery-content{
+        padding-right: 8vw;
+    }
+
+    .builders-image{
+        padding-left: 5vw;
+    }
+
+}
+
 @media only screen and (max-width:1550px) {
     #right-header {
         margin-left: 0px;
@@ -513,6 +550,10 @@ body {
 
     .section9-image{
         padding-left: 0px;
+    }
+
+    .section9-left{
+        margin-right: 5vw;
     }
 }
 
@@ -630,6 +671,25 @@ body {
     .footer-tag {
         margin-left: 100px;
         margin-bottom: 90px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .section2-image{
+        max-width: 80%;
+    }
+
+    .section-title{
+        padding-top: 3vw;
+    }
+
+    .section-6{
+        padding-bottom: 10vw;
+    }
+
+    .left-image{
+        padding-top: 10vw;
+        padding-left: 5vw;
     }
 }
 
