--- a/css/our_world.css
+++ b/css/our_world.css
@@ -252,28 +252,35 @@ body {
         gap: 20px;
     }
 
-    .left-header {
-        margin: 0px;
-        padding-left: 0px;
-    }
-    .navigation {
-        padding-right: 20px;
+    #right-header {
+        margin-left: 10%;
     }
     .header-text {
-        margin-left: 150px;
+        margin-left: 0px;
         margin-top: 50px;
+    }
+    .nav-tab {
+        font-size: 15px;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    .navigation {
+        padding-right: 6px;
     }
     .footer {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 0.5fr 1.5fr 1fr 1fr;
         background-color: #161f1e;
     }
+
     .footer-logo {
-        margin-left: 100px;
+        margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 220px;
     }
     .footer-tag {
-        margin-left: 100px;
+        margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 90px;
     }
 }
