--- a/css/about.css
+++ b/css/about.css
@@ -73,7 +73,7 @@ body {
     margin: 6px 0;
 }
 
-#dropdown{
+#dropdown {
     display: none;
 }
 
@@ -192,7 +192,7 @@ body {
     line-height: 40px;
 }
 
-.section2-image{
+.section2-image {
     height: 900px;
 }
 
@@ -457,39 +457,31 @@ body {
 }
 
 @media only screen and (max-width:1900px) {
-
-    .section-title, .mission-content{
+    .section-title, .mission-content {
         padding-left: 7vw;
         padding-right: 9vw;
     }
-    .section-4{
+    .section-4 {
         padding-left: 7vw;
     }
-
-    .section4-right{
+    .section4-right {
         padding-left: 20vw;
     }
-    
-    .section-7{
+    .section-7 {
         gap: 6vw;
     }
-
-    .right-image{
+    .right-image {
         max-width: 90%;
     }
-
-    .left-image{
+    .left-image {
         padding-left: 8vw;
     }
-
-    .discovery-content{
+    .discovery-content {
         padding-right: 8vw;
     }
-
-    .builders-image{
+    .builders-image {
         padding-left: 5vw;
     }
-
 }
 
 @media only screen and (max-width:1550px) {
@@ -501,7 +493,6 @@ body {
     .header-text {
         padding-left: 300px;
     }
-
     /* section 2 */
     .section-title {
         font-size: 40px;
@@ -514,7 +505,6 @@ body {
         font-size: 20px;
         line-height: 30px;
     }
-
     /* section 4 */
     .section-4 {
         padding-left: 150px;
@@ -522,13 +512,10 @@ body {
     .section4-right {
         padding-left: 100px;
     }
-
     /* section 7 */
-
     .section-7 {
         gap: 120px;
     }
-
     .left-image {
         padding-left: 100px;
         max-width: 100%;
@@ -547,37 +534,30 @@ body {
         padding-right: 50px;
         max-width: 2px;
     }
-
-    .section9-image{
+    .section9-image {
         padding-left: 0px;
     }
-
-    .section9-left{
+    .section9-left {
         margin-right: 5vw;
     }
 }
 
 @media only screen and (max-width:1380px) {
-
     /* header */
     .left-header {
         padding-left: 0px;
     }
-
     /* section 1 */
-
-.section-1 {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    font-family: 'Playfair Display', serif;
-    font-size: 30px;
-    text-align: center;
-    letter-spacing: 0px;
-}
-
-     /* section 2 */
-
-     .section-title {
+    .section-1 {
+        padding-top: 100px;
+        padding-bottom: 100px;
+        font-family: 'Playfair Display', serif;
+        font-size: 30px;
+        text-align: center;
+        letter-spacing: 0px;
+    }
+    /* section 2 */
+    .section-title {
         font-size: 40px;
         padding-left: 70px;
         padding-top: 100px;
@@ -589,22 +569,17 @@ body {
         font-size: 20px;
         line-height: 30px;
     }
-    .section2-image{
+    .section2-image {
         max-height: 80%;
     }
-
     /* section 4 */
-
     .explore-text {
         font-size: 50px;
     }
-
     /* section 7 */
-
     .section-7 {
         gap: 90px;
     }
-
     .left-image {
         padding-left: 100px;
         max-width: 100%;
@@ -618,17 +593,13 @@ body {
         padding-bottom: 100px;
         padding-left: 0px;
     }
-
     /* section 9 */
-
-    .section9-left{
+    .section9-left {
         max-width: 400px;
     }
-
-    .section9-right{
+    .section9-right {
         max-height: 700px;
     }
-
     .footer {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr 1fr;
@@ -658,7 +629,6 @@ body {
         margin-top: 50px;
         padding-left: 50px;
     }
-
     .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -675,19 +645,16 @@ body {
 }
 
 @media only screen and (max-width: 1100px) {
-    .section2-image{
+    .section2-image {
         max-width: 80%;
     }
-
-    .section-title{
+    .section-title {
         padding-top: 3vw;
     }
-
-    .section-6{
+    .section-6 {
         padding-bottom: 10vw;
     }
-
-    .left-image{
+    .left-image {
         padding-top: 10vw;
         padding-left: 5vw;
     }
@@ -698,24 +665,118 @@ body {
         margin: 0px;
         padding-left: 0px;
     }
+    #right-header {
+        margin-left: 8%;
+    }
+    .header-text {
+        margin-left: 0px;
+        margin-top: 50px;
+    }
+    .nav-tab {
+        font-size: 15px;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
     .navigation {
         padding-right: 20px;
     }
-    .header-text {
-        margin-left: 150px;
-        margin-top: 50px;
+    .discover-text, .yourworld-text {
+        font-size: 70px;
     }
+    .scroll-text {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+    .scroll-arrow {
+        left: 50%;
+    }
+    /* section 1 */
+    .section-1 {
+        font-size: 20px;
+    }
+    /* section 2 */
+    .section-2 {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-bottom: 0px;
+    }
+    .section-title {
+        font-size: 30px;
+        padding-top: 0px;
+    }
+    .mission-content {
+        font-size: 15px;
+        line-height: 20px;
+        margin-bottom: 5%;
+    }
+    .section2-image {
+        padding-left: 20%;
+        height: 90%;
+    }
+    /* section 3 */
+    .section3-image {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    /* section 4 */
+    .section-4 {
+        padding: 10% 10%;
+    }
+    .explore-text {
+        font-size: 30px;
+    }
+    .button {
+        padding: 20px;
+        font-size: 16px;
+        margin: 4px 2px;
+    }
+    /* section 7 */
+    .section7-title {
+        padding-top: 0px;
+        font-size: 30px;
+    }
+    .discovery-content {
+        font-size: 15px;
+        line-height: 30px;
+        padding-right: 30px;
+    }
+    .right-image {
+        max-width: 90%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 0 px;
+    }
+    /* section 8 */
+    .builders-image {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-right: 2%;
+        padding-top: 0%;
+        padding-bottom: 0%;
+        padding-left: 20%;
+    }
+    .section9-right{
+        padding-left: 20%;
+        max-height: 60%;
+    }
+
+    /* footer */
     .footer {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 0.5fr 1.5fr 1fr 1fr;
         background-color: #161f1e;
     }
     .footer-logo {
-        margin-left: 100px;
+        margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 220px;
     }
     .footer-tag {
-        margin-left: 100px;
+        margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 90px;
+    }
+    .footer-section {
+        margin-top: 60px;
     }
 }
